--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/kanabserg/smr-parking#readme",
   "dependencies": {
-    "@types/jquery": "^3.3.38"
+    "@types/jquery": "^3.3.38",
+    "moment": "^2.26.0"
   }
 }
