--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kanabserg/smr-parking#readme",
   "dependencies": {
     "@types/jquery": "^3.3.38",
-    "moment": "^2.26.0"
+    "moment": "^2.26.0",
+    "moment-duration-format": "^2.3.2"
   }
 }
